cmake_minimum_required(VERSION 3.21)
project(CLeetCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(CLeetCode main.cpp "cplus/problems/258. Add Digits.cpp" "cplus/problems/295. Find Median from Data Stream.cpp" "cplus/problems/590. N-ary Tree Postorder Traversal.cpp" "cplus/problems/798. Smallest Rotation with Highest Score.cpp")
